--- a/src/app/simulador/formulario/formulario.component.html
+++ b/src/app/simulador/formulario/formulario.component.html
@@ -1,7 +1,7 @@
 <form class="container" [formGroup]="form" (ngSubmit)="onSubmit()">
 
   <div class="form-group">
-    <label for="qtdMes">Quantidade de unidades</label>
+    <label for="qtdMes">Quantidade de unidades vendidas por mês</label>
     <input type="text" class="form-control" name="qtdMes" id="qtdMes" required formControlName="qtdMes">
   </div>
 
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-group">
-    <label for="ticketMedio">Ticket médio</label>
+    <label for="ticketMedio">Ticket médio R$</label>
     <input type="text" class="form-control" name="ticketMedio" id="ticketMedio" required formControlName="ticketMedio">
   </div>
 
@@ -20,7 +20,7 @@
     <input type="text" class="form-control" name="qtdVendedoresLoja" id="qtdVendedoresLoja" required formControlName="qtdVendedoresLoja">
   </div>
 
-  <input type="submit" class="btn btn-primary mt-4" value="Salvar">
+  <input type="submit" class="btn btn-primary mt-4" value="Simular">
   <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
 
 </form>
