--- a/src/app/simulador/formulario/formulario.component.html
+++ b/src/app/simulador/formulario/formulario.component.html
@@ -1,26 +1,33 @@
-<form class="container" [formGroup]="form" (ngSubmit)="onSubmit()">
-
-  <div class="form-group">
-    <label for="qtdMes">Quantidade de unidades vendidas por mês</label>
-    <input type="text" class="form-control" name="qtdMes" id="qtdMes" required formControlName="qtdMes">
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Simulador de Retorno do Investimento da UseCash</h1>
+    <p class="lead">Preencha todos os campos para poder visualizar os resultados</p>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="qtdMes">Quantidade de unidades vendidas por mês</label>
+        <input type="text" class="form-control" name="qtdMes" id="qtdMes" required formControlName="qtdMes">
+      </div>
+    
+      <div class="form-group">
+        <label for="qtdLojas">Quantidade de lojas</label>
+        <input type="text" class="form-control" name="qtdLojas" id="qtdLojas" required formControlName="qtdLojas">
+      </div>
+    
+      <div class="form-group">
+        <label for="ticketMedio">Ticket médio R$</label>
+        <input type="text" class="form-control" name="ticketMedio" id="ticketMedio" required formControlName="ticketMedio">
+      </div>
+    
+      <div class="form-group">
+        <label for="qtdVendedoresLoja">Quantidade de vendedores por loja</label>
+        <input type="text" class="form-control" name="qtdVendedoresLoja" id="qtdVendedoresLoja" required formControlName="qtdVendedoresLoja">
+      </div>
+    
+      <input id="btnSimular" type="submit" class="btn btn-block btn-lg" value="Simular">
+    
+    </form>
+  
+  
+  
   </div>
-
-  <div class="form-group">
-    <label for="qtdLojas">Quantidade de lojas</label>
-    <input type="text" class="form-control" name="qtdLojas" id="qtdLojas" required formControlName="qtdLojas">
-  </div>
-
-  <div class="form-group">
-    <label for="ticketMedio">Ticket médio R$</label>
-    <input type="text" class="form-control" name="ticketMedio" id="ticketMedio" required formControlName="ticketMedio">
-  </div>
-
-  <div class="form-group">
-    <label for="qtdVendedoresLoja">Quantidade de vendedores por loja</label>
-    <input type="text" class="form-control" name="qtdVendedoresLoja" id="qtdVendedoresLoja" required formControlName="qtdVendedoresLoja">
-  </div>
-
-  <input type="submit" class="btn btn-primary mt-4" value="Simular">
-  <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
-
-</form>
+</div>
