--- a/src/app/simulador/projecao/projecao.component.css
+++ b/src/app/simulador/projecao/projecao.component.css
@@ -1,11 +1,4 @@
-.teste{
-    flex: 1;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
 
-}
 
 #center {
     margin: auto;
@@ -21,10 +14,15 @@
     text-align: center;
 }
 .card1{
-    background-color: #357693;
+    background-color: #f4f8fa;
+	min-height: 100px;
+	border: 5px solid;
+
+    border-image: linear-gradient(45deg, #04dd33, #357693) 1;
 }
-.card2{
-    background-color: #fe7f75;
+.borderCard{
+    border-image: linear-gradient(45deg, #04dd33, #357693) 1;
+    border-right: 5px solid;
 }
 .card3{
     background-color: #02364e;
@@ -35,13 +33,11 @@
 	display: grid;
 	place-items: center;
 	min-height: 100px;
-	border: 8px solid;
+	border: 4px solid #357693 ;
 	padding: 1rem;
-    border-image: linear-gradient(45deg, #fe7f75, #357693) 1;
+   
     
 }
-
-
 
 #chart {
     
@@ -58,6 +54,16 @@
         float: left;
     }
 }
-  
 
+
+.card-title{
+    font-weight: bolder;
+    text-align: center;
+}
+
+
+
+#tee{
+    margin-top: 200px;
+}
 
