--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<router-outlet></router-outlet>
+
+<sim-formulario [proj]="proj"></sim-formulario>
+<sim-projecao #proj></sim-projecao>
+
+
