--- a/src/app/simulador/projecao/projecao.component.css
+++ b/src/app/simulador/projecao/projecao.component.css
@@ -16,13 +16,12 @@
 .card1{
     background-color: #f4f8fa;
 	min-height: 100px;
-	border: 5px solid;
+	border: 2px solid #ec6d05;
 
-    border-image: linear-gradient(45deg, #04dd33, #357693) 1;
+    
 }
 .borderCard{
-    border-image: linear-gradient(45deg, #04dd33, #357693) 1;
-    border-right: 5px solid;
+    border-right: 2px solid #ec6d05;
 }
 .card3{
     background-color: #02364e;
@@ -39,7 +38,7 @@
     
 }
 
-#chart {
+#telaInicial {
     
     text-align: center;
     padding: 20px;
@@ -67,3 +66,18 @@
     margin-top: 200px;
 }
 
+
+#btnSimularCenario{
+    margin-top: 20px;
+    background-color: #ec6d05;;
+}
+
+
+
+.vale{
+    text-align: center;
+}
+
+#jumb{
+    background-color: white;
+}
